2006-08-03  Richard Hult  <richard@imendio.com>

	* src/default-prefs-gecko-1-8.js: Comment out the document color
	setting for now, since it breaks on gecko < 1.9 (#349229).

	* configure.in: Bump version.

2006-07-30  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* devhelp.schemas.in: fix schema entry for
	show_advanced_search_options to match the actual gconf key used in
	code (was show_advanced_options). Bug #349352.

2006-07-27  Richard Hult  <richard@imendio.com>

	* Release 0.12

2006-07-27  Christian Persch  <chpe@cvs.gnome.org>

	* src/default-prefs-gecko-1-8.js: Always use theme colours.
	Fixes bug #347967.

2006-07-27  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: (window_activate_quit):
	* ui/window.ui: Add quit menu item, fixes bug #346786.

2006-05-20  Tristan Van Berkom <tvb@gnome.org>

	* src/dh-search.c:
	  o Added a search source distinction... to mark whether the
	    search string has been requested through the dh-search api
	    or from the entries themselves.
	  o When the advanced box is hidden... ignore book and page buffers
	    if the search comes from the entry.
	  o Set book & page entries upon gtk_widget_show (i.e. gconf setting)
	  o destroy book & page buffers when setting the entry (so as not to
	    re-enable those when the advanced_box shows up).
	
2006-05-17  Tristan Van Berkom <tvb@gnome.org>

	* src/dh-search.c: Added a abstraction buffers in the DhSearch cleaning
	  up the code a little and allowing for the dh_search_set_search_string() 
	  api to work properly with the advanced box hidden.

2006-05-16  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* configure.in:
	* devhelp.keys.in:
	* devhelp.mime: Remove obsolete and unused mime/keys files.

	* src/dh-main.c: (main): Improve the option strings a bit.

	* ui/devhelp.glade:
	* src/dh-base.[ch:]
	* src/dh-search.[ch]:
	* src/dh-preferences.[ch]: Clean up a bit, and add a
	preference for showing/hiding the new search fields.
