@@ -1,3 +1,7 @@
+2006-08-17  Richard Hult  <richard@imendio.com>
+
+	* sv.po: Update.
+
 2006-08-16  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
